--- a/UI/src/dashboard/reservationBar/reservationBar.scss
+++ b/UI/src/dashboard/reservationBar/reservationBar.scss
@@ -5,49 +5,40 @@
     -webkit-backdrop-filter: blur(10px);
     right: 0px;
     position: fixed;
-    width: 210px;
+    width: 220px;
     background-color: $bg-color-primary;
     border-left: solid 1px #3D4153;
     z-index: 1;
     box-sizing: border-box;
-    min-height: 100%;
     height: 100%;
     font-family:$font-primary;
     color: $text-color-secondary;
         .reserve{
+            position: relative;
             margin-top: 10px;
             margin-left:10px;
-            padding: 5px;
-            padding-bottom: 0px;
             background-color: #3D4358;
-            height: 110px;
             border-radius: 5px;
-            width: calc(100% - 30px);
+            padding-top: 5px;
+            padding-bottom: 5px;
+            width: calc(100% - 20px);
                 .title{
+                    display: block;
                     font-size: 9pt;
-                    margin-left: 5px;
-                    
-                }
-                .text{
-                    font-size: 7pt;
-                }
-                .select{
-                    font-size: 7pt;
-                    margin-left: 5px;
-                }
-                .btn{
-                    font-size: 9pt;
-                    padding: 4px;
-                    background-color: #739AAF;
-                    outline: none;
-                    border: none;
                     margin-left: 5px;
                     margin-top: 5px;
-                    color: #FFFFFF;
-                    width: 95%;
+                    margin-bottom: 5px;
                 }
-                .btn:hover{
-                    background-color: $bg-color-primary;
+                .choose{
+                     display: flex;
+                     .text{
+                        font-size: 8pt;
+                        margin-top: 3px;
+                     }
+                }
+                .select{
+                    font-size: 8pt;
+                    margin-left: 5px;
                 }
         }   
     .status{
@@ -55,5 +46,13 @@
         text-align: center;
         font-size: 9pt;
         color: #4d546c;
+    }
+    .cardpanel{
+        height: 73%;
+        overflow: auto;
+        margin-top: 10px;
+    }
+    .cardpanel::-webkit-scrollbar{
+        width: 0px;
     }
 }
