--- a/UI/src/dashboard/reservationBar/reservationBar.scss
+++ b/UI/src/dashboard/reservationBar/reservationBar.scss
@@ -25,20 +25,23 @@
                 .title{
                     display: block;
                     font-size: 9pt;
-                    margin-left: 5px;
+                    margin-left: 7px;
                     margin-top: 5px;
                     margin-bottom: 5px;
                 }
                 .choose{
                      display: flex;
+                     margin-left: 2px;
                      .text{
                         font-size: 8pt;
                         margin-top: 3px;
                      }
                 }
                 .select{
+                    display: inline-block;
                     font-size: 8pt;
-                    margin-left: 5px;
+                    margin-left: 7px;
+                    margin-top: 10px;
                 }
         }   
     .status{
