fixed doughnut chart in card UI

--- a/UI/src/dashboard/reservationBar/card.scss
+++ b/UI/src/dashboard/reservationBar/card.scss
@@ -27,6 +27,7 @@
         background-color: #55596A;
         height: 28px;
         width: 100%;
+        cursor: default;
         .checkbox{
             float: left;
             margin-left: 10px;
