create login UI

--- a/UI/src/sass/theme.scss
+++ b/UI/src/sass/theme.scss
@@ -35,6 +35,7 @@
             align-items: center;
             -webkit-backdrop-filter: blur(15px);
             background-color: rgba(18, 18, 19, 0.74);
+            // background-color: rgba(18, 18, 19, 0.85);
             width: 100%;
             height: calc(100% - 49px);
             z-index: 4;
