--- a/UI/src/header/header.scss
+++ b/UI/src/header/header.scss
@@ -13,6 +13,10 @@
         padding-top: 15px;
         color: $text-color-secondary;
         width: 50%;
+        .name{
+           position: absolute;
+           right: 74px;
+        }
         .signin{
            position: absolute;
            right: 0px;
