--- a/UI/src/dashboard/map/map.scss
+++ b/UI/src/dashboard/map/map.scss
@@ -19,7 +19,7 @@
         border-radius: 5px;
         height: 50px;
         padding: 3px;
-        width: 185px;
+        width: 200px;
         font-family: $font-primary;
         .text{
             padding-left: 5px;
@@ -28,7 +28,8 @@
                 font-size: 14px;
             }
             .utc{
-                font-size: 9px;
+                margin-top: 1px;
+                font-size: 8px;
             }
         }
     }
