--- a/UI/src/dashboard/settings/timezone.scss
+++ b/UI/src/dashboard/settings/timezone.scss
@@ -17,15 +17,16 @@
     }
     .content{
         display: flex;
-        margin-left: 10px;
-        margin-right: 10px;
-        margin-bottom: 10px;
+        margin: 10px;
         width: calc(100% - 20px);
         height: 100%;
         .data{
             height: 100%;
             width: 50%;
             position: relative;
+            .width{
+                width: 85%;
+            }
             .time{
                 margin-top: 10px;
                 color: #739aaf;
@@ -38,8 +39,8 @@
             }
             .list{
                 margin-top: 10px;
-                width: 80%;
-                height: 25px;
+                width: 100%;
+                height: 20px;
                 background-color: #464a5f;
                 color: #FFFFFF;
                 border: none;
@@ -55,15 +56,17 @@
                     padding: 4px;
                     outline: none;
                     border: none;
-                    margin-right: 5px;
                     margin-top: 5px;
                     color: #FFFFFF;
                     width: 80px;
                 }
                 .cancel{
+                    float: left;
                     background-color: #ef303e;
                 }
                 .ok{
+                    float: right;
+                    margin-left: 15px;
                     background-color: #739aaf;
                 }
                 .cancel:hover,.ok:hover{
