--- a/UI/src/dashboard/map/map.scss
+++ b/UI/src/dashboard/map/map.scss
@@ -4,7 +4,7 @@
 #map{
     position: fixed;
     background-color: $text-color-secondary;
-    height: 100%;
+    height: calc(100% - 49px);
     width: calc(100% - 220px);
     .timezone{
         position: absolute;
