--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -139,6 +139,7 @@
                     position: relative;
                     background-color: rgba(35,41,57,0.84);
                     padding: 5px 10px 5px 20px;
+                    margin-bottom: 5px;
                     .text{
                         width: 50%;
                     }
