add item event in serach resource GUI

--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -39,6 +39,7 @@
             .searchbtn{
               width: 55%;
               margin: auto;
+              padding-right: 10px;
             }
             .row{
                 margin-bottom: 5px;
