--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -117,6 +117,15 @@
             margin: auto;
             color: #FFFFFF;
             font-size: 9pt;
+        }
+        .form2{
+            width: 250px;
+            height: 200px;
+            margin: auto;
+            color: #FFFFFF;
+            font-size: 9pt;
+            box-sizing: border-box;
+        }
             .sitelist{
                 margin: 10px 0px 10px 0px;
                 max-height: 80px;
@@ -174,7 +183,7 @@
                        margin-top: 9px;
                      }
                 }
-                .input,.inputdate,.inputtime,.inputradio,.inputtype{
+                .input,.inputdate,.inputtime,.inputradio,.inputtype,.inputtitle,.textarea{
                     background-color: #464a5f;
                     border-radius: 3px;
                     padding-right: 5px;
@@ -227,7 +236,41 @@
                 .inputradio::-moz-placeholder{
                     color: #000000;
                 }
+                .inputtitle{
+                    width: 240px;
+                    margin-bottom: 5px;
+                }
+                .inputtitle::-webkit-input-placeholder{
+                    color: #000000;
+                }
+                .inputtitle::-moz-placeholder{
+                    color: #000000;
+                }
+                .textarea{
+                    width: 240px;
+                    height: 70px;
+                    resize: none;
+                }
+                .textarea::-webkit-input-placeholder{
+                    color: #000000;
+                }
+                .textarea::-moz-placeholder{
+                    color: #000000;
+                }
+                .textarea::-webkit-scrollbar-track{
+                    border-radius: 10px;
+                    background-color: rgba(35,41,57,0.84);
+                }
+                .textarea::-webkit-scrollbar{
+                    width: 5px;
+                    border-radius: 10px;
+                    background-color: rgba(35,41,57,0.84);
+                }
+                .textarea::-webkit-scrollbar-thumb{
+                    border-radius: 10px;
+                    background-color: rgba(18, 18, 19,0.76);
+                }    
             }
-        }
+
     }
 }
