updated right panel GUI and add event to reserve button

--- a/UI/src/dashboard/reservationBar/reservationBar.scss
+++ b/UI/src/dashboard/reservationBar/reservationBar.scss
@@ -37,6 +37,11 @@
                         font-size: 8pt;
                         margin-top: 3px;
                      }
+                     .multipletext{
+                        font-size: 8pt;
+                        margin-top: 3px;
+                        opacity: 0.5;
+                     }
                 }
                 .select{
                     display: inline-block;
