add check reservation query to first step in reservation task

--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -274,7 +274,11 @@
                     padding-left: 0px;
                 }
                 .inputradio{
-                    width: 30px;
+                    height: 19px;
+                    width: 29px;
+                    border: 1px solid #464a5f;
+                    padding-right: 4px;
+                    padding-left: 4px;
                     margin-right: 5px;
                     text-align: right;
                     margin-top: 0px;
