reservation task completed

--- a/UI/src/dashboard/login/login.scss
+++ b/UI/src/dashboard/login/login.scss
@@ -39,6 +39,7 @@
             width: 155px;
             border: none;
             height: 20px;
+            color: #FFFFFF;
         }
         .input::-webkit-input-placeholder{
             color: #000000;
