--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -300,6 +300,7 @@
                     color: #000000;
                 }
                 .textarea{
+                    font-family: $font-primary;
                     width: 240px;
                     height: 70px;
                     resize: none;
