--- a/UI/src/sass/theme.scss
+++ b/UI/src/sass/theme.scss
@@ -38,7 +38,9 @@
             justify-content: center;
             align-items: center;
             -webkit-backdrop-filter: blur(15px);
-            background-color: rgba(18, 18, 19, 0.74);
+            background-color: #070707;
+            opacity: 0.86;
+            // background-color: rgba(18, 18, 19, 0.74);
             // background-color: rgba(18, 18, 19, 0.85);
             width: 100%;
             height: calc(100% - 49px);
@@ -50,7 +52,9 @@
             justify-content: center;
             align-items: center;
             -webkit-backdrop-filter: blur(15px);
-            background-color: rgba(18, 18, 19, 0.74);
+            background-color: #070707;
+            opacity: 0.86;
+            // background-color: rgba(18, 18, 19, 0.74);
             width: calc(100% - 220px);
             height: calc(100% - 49px);
             z-index: 4;
