--- a/UI/src/dashboard/history/history.scss
+++ b/UI/src/dashboard/history/history.scss
@@ -1,8 +1,18 @@
 @import '../../sass/_colors.scss';
 @import '../../sass/_fonts.scss';
 
+@keyframes popup_slice_animate {
+    from {
+        margin-bottom: -10px;
+        opacity: 0.25;
+    }
+    to{
+        opacity: 1;
+    }
+}
+
 .panel{
-    width: 850px;
+    width: 880px;
     height: 425px;
     font-family: $font-primary;
     border-radius: 3px;
@@ -34,9 +44,12 @@
         height: calc(100% - 29px);
         width: 100%;
         box-sizing: border-box;
+        .space{
+            margin-bottom: 4px;
+        }
         .result{
             display: block;
-            width: 70%;
+            width: 67%;
             height: 100%;
             display: flex;
             flex-direction: column;
@@ -154,9 +167,9 @@
             }
         }
         .resultdetail{
-            width: 30%;
+            width: 33%;
             height: 100%;
-            border-left: 1px solid #FFFFFF;
+            border-left: 1px solid #929296;
             font-size: 9pt;
             color: #FFFFFF;
             position: relative;
@@ -173,7 +186,7 @@
             .data{
                 padding: 15px 15px 0px 15px;
                 overflow-y: auto;
-                height: calc(100% - 40px);
+                height: calc(100% - 45px);
                 width: 100%;
                 box-sizing: border-box;
                 .top{
@@ -214,10 +227,13 @@
             .footer{
                 position: absolute;
                 width: 100%;
-                height: 103px;
+                height: 120px;
                 bottom: 0px;
-                border-top: 1px solid #FFFFFF;
+                border-top: 1px solid #929296;
                 background-color: #000000;
+                animation-name: popup_slice_animate;
+                animation-duration: 0.25s;
+                animation-timing-function: ease-out;
                 .title{
                     position: relative;
                     height: 27px;
@@ -258,6 +274,11 @@
                                 top: 8px;
                             }
                         }
+                        .hinttext{
+                            font-size: 8pt;
+                            color: #ef303e;
+                            padding: 5px 15px 0px 15px;
+                        }
                         .inputdate,.inputtime,.input{
                             background-color: #464a5f;
                             border-radius: 3px;
@@ -297,6 +318,12 @@
     }
     .warning{
         color: #ef303e;
+    }
+    .running{
+        color: #76FF03;
+    }
+    .waiting{
+        color: #FF8F00;
     }
     .site{
         box-sizing: border-box;
