--- a/UI/src/dashboard/reservation/reservation.scss
+++ b/UI/src/dashboard/reservation/reservation.scss
@@ -8,8 +8,7 @@
     border-radius: 3px;
     border: 1px solid #929296;
     position: relative;
-    background-color: rgb(0,0,0);
-    opacity: 0.66;
+    background-color: rgba(0,0,0,0.66);
     header{
         border-radius: 3px 3px 0px 0px;
         border-bottom: 1px solid #929296;
