--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -7,8 +7,7 @@
     font-family: $font-primary;
     border-radius: 3px;
     border: 1px solid #929296;
-    background-color: rgb(0,0,0);
-    opacity: 0.66;
+    background-color: rgba(0,0,0,0.66);
     header{
         border-radius: 3px 3px 0px 0px;
         border-bottom: 1px solid #929296;
@@ -17,7 +16,6 @@
         height: 28px;
         position: relative;
         background-color: #161923;
-        // background-color: rgba(18, 18, 19,0.76);
         div{
             color: #FFFFFF;
             padding-top: 7px;
