--- a/UI/src/dashboard/settings/settings.scss
+++ b/UI/src/dashboard/settings/settings.scss
@@ -7,8 +7,7 @@
     font-family: $font-primary;
     border-radius: 3px;
     border: 1px solid #929296;
-    background-color: rgb(0,0,0);
-    opacity: 0.66;
+    background-color: rgba(0,0,0,0.66);
     header{
         border-radius: 3px 3px 0px 0px;
         border-bottom: 1px solid #929296;
@@ -16,7 +15,6 @@
         text-align: center;
         height: 28px;
         background-color: #161923;
-        // background-color: rgba(18, 18, 19,0.76);
         div{
             color: #FFFFFF;
             padding-top: 7px;
