--- a/UI/src/sass/theme.scss
+++ b/UI/src/sass/theme.scss
@@ -44,10 +44,7 @@
             justify-content: center;
             align-items: center;
             -webkit-backdrop-filter: blur(15px);
-            background-color: #070707;
-            opacity: 0.86;
-            // background-color: rgba(18, 18, 19, 0.74);
-            // background-color: rgba(18, 18, 19, 0.85);
+            background-color: rgba(7,7,7,0.86);
             width: 100%;
             height: calc(100% - 49px);
             z-index: 4;
@@ -58,9 +55,7 @@
             justify-content: center;
             align-items: center;
             -webkit-backdrop-filter: blur(15px);
-            background-color: #070707;
-            opacity: 0.86;
-            // background-color: rgba(18, 18, 19, 0.74);
+            background-color: rgba(7,7,7,0.86);
             width: calc(100% - 220px);
             height: calc(100% - 49px);
             z-index: 4;
