--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -2,8 +2,8 @@
 @import '../../sass/_fonts.scss';
 
 .panel{
-    width: 720px;
-    height: 370px;
+    width: 730px;
+    height: 460px;
     font-family: $font-primary;
     border-radius: 3px;
     border: 1px solid #929296;
@@ -33,9 +33,22 @@
         width: 100%;
         .searchinput{
             width: calc(32% - 5px);
-            padding: 10px 0px 10px 10px;
+            padding: 15px 5px 15px 15px;
             color: #FFFFFF;
             font-size: 9pt;
+            .divideblock,.divideblock2{
+                display: flex;
+                margin-bottom: 5px;
+                font-weight: bold;
+            }
+            .divideblock2{
+                margin-top: 15px;
+            }
+            .horizontalline{
+                width: 100%;
+                margin: 7px 12px 0px 10px;
+                border-top: 1px solid #464a5f;
+            }
             .searchbtn{
               width: 55%;
               margin: auto;
@@ -130,12 +143,27 @@
             color: #FFFFFF;
             font-size: 9pt;
             .label{
-                padding: 10px;
-                .firstlabel,.secondlabel{
-                    padding-bottom: 5px;
-                }
+                padding: 15px;
                 .secondlabel{
                     opacity: 0.5;
+                }
+                .detaillabel{
+                    display: flex;
+                    margin: 10px 0px 10px 0px;
+                    padding-left: 40px;
+                    .column1{
+                      width: 55%;
+                      
+                    }
+                    .column2{
+                      width: 45;
+                    }
+                    .empty{
+                      display: inline-block;
+                    }
+                    .hilight{
+                      color: #EFA430;
+                    }
                 }
             }
             .data{
@@ -144,7 +172,7 @@
                     display: flex;
                     position: relative;
                     background-color: rgba(35,41,57,0.84);
-                    padding: 5px 10px 5px 20px;
+                    padding: 5px 10px 5px 15px;
                     margin-bottom: 5px;
                     .text{
                         width: 50%;
@@ -160,7 +188,15 @@
                     margin-top: 1px;
                     .item{
                         display: flex;
-                        padding: 5px 10px 5px 20px;
+                        padding: 5px 10px 5px 15px;
+                        .text{
+                            width: 50%;
+                        }
+                    }
+                    .itemactive{
+                        background-color: rgba(239,164,48,0.4);
+                        display: flex;
+                        padding: 5px 10px 5px 15px;
                         .text{
                             width: 50%;
                         }
