fixed bug of history component

--- a/UI/src/dashboard/reservationBar/card.scss
+++ b/UI/src/dashboard/reservationBar/card.scss
@@ -98,6 +98,10 @@
                 margin: auto;
                 text-align: center;
             }
+            .chartwrap{
+                width: 90px;
+                height: 75px;
+            }
         }
         .resource{
             .cpu, .mem{
