--- a/UI/src/dashboard/map/map.scss
+++ b/UI/src/dashboard/map/map.scss
@@ -33,6 +33,33 @@
             }
         }
     }
+    .zoomcontrol{
+        position: absolute;
+        right: -70px;
+        bottom: 105px;
+        z-index: 2;
+        transform: rotate(270deg);
+        display: flex;
+        flex-direction: rows;
+        .zoomslider{
+            margin: 0px 5px 2px 5px;
+        }
+        .zoombtn{
+            display: flex;
+            justify-content: center;
+            background-color: #739AAF;
+            border: 2px solid #739AAF;
+            border-radius: 3px;
+            box-shadow: 0 2px 6px rgba(0,0,0,.3);
+            width: 20px;
+            height: 20px;
+            box-sizing: border-box;
+            transform: rotate(270deg);
+        }
+        .icon{
+            width: 14px;
+        }
+    }
     .search{
         display: flex;
         position: absolute;
