--- a/UI/src/dashboard/map/map.scss
+++ b/UI/src/dashboard/map/map.scss
@@ -56,6 +56,9 @@
             box-sizing: border-box;
             transform: rotate(270deg);
         }
+        .zoombtn:hover{
+            cursor: pointer;
+        }
         .icon{
             width: 14px;
         }
