--- a/UI/src/dashboard/reservationBar/reservationBar.scss
+++ b/UI/src/dashboard/reservationBar/reservationBar.scss
@@ -18,6 +18,7 @@
             margin-top: 10px;
             margin-left:10px;
             background-color: #3D4358;
+            // border: 1px solid #191E2C;
             border-radius: 5px;
             padding-top: 5px;
             padding-bottom: 5px;
