--- a/UI/src/dashboard/history/history.scss
+++ b/UI/src/dashboard/history/history.scss
@@ -109,7 +109,7 @@
                 }
                 .itemlist{
                     height: 265px;
-                    overflow-y: auto;
+                    // overflow-y: auto;
                     margin-top: 1px;
                     .item{
                         display: flex;
