--- a/UI/src/dashboard/reservationBar/cardDescription.scss
+++ b/UI/src/dashboard/reservationBar/cardDescription.scss
@@ -17,10 +17,11 @@
         position: absolute;
         margin-top: 10px;
         right: 230px;
-        z-index: 2;
+        z-index: 5;
         min-height: 335px;
         width: 450px;
-        background-color: rgba(39, 45, 62, 0.5);
+        // background-color: rgba(39, 45, 62, 0.5);
+        background-color: rgba(7, 7, 7, 0.86);
         border: 1px solid #3D4153;
         box-shadow: 0px 3px 6px rgba(0, 0, 0, 0.32);
         border-radius: 3px;
