--- a/UI/src/sass/theme.scss
+++ b/UI/src/sass/theme.scss
@@ -67,8 +67,12 @@
         .tooltiptext--hide{
             visibility: hidden;
         }
-        .tooltip:hover .tooltiptext--left,.tooltip:hover .tooltiptext--top{
+        .tooltip:hover .tooltiptext--left{
             visibility: visible;
+        }
+        .tooltip--small{
+            width: 60px !important;
+            top: -10px !important;
         }
         .tooltip .tooltiptext--left{
             visibility: hidden;
@@ -93,31 +97,6 @@
             border-width: 5px;
             border-style: solid;
             border-color: transparent transparent transparent black;
-        }
-        .tooltip .tooltiptext--top{
-            // border: 1px solid #739AAF;
-            visibility: hidden;
-            width: 60px;
-            background-color: black;
-            color: #EFA430;
-            text-align: center;
-            border-radius: 6px;
-            padding: 5px 0;
-            position: absolute;
-            z-index: 1;
-            bottom: 205%;
-            left: 50%;
-            margin-left: -29px;
-        }
-        .tooltip .tooltiptext--top::after{
-            content: "";
-            position: absolute;
-            top: 100%;
-            left: 50%;
-            margin-left: -5px;
-            border-width: 5px;
-            border-style: solid;
-            border-color: black transparent transparent transparent;
         }
     }  
 }
