--- a/UI/src/dashboard/map/map.scss
+++ b/UI/src/dashboard/map/map.scss
@@ -9,27 +9,36 @@
     .timezone{
         position: absolute;
         display: flex;
+        justify-content: center;
         z-index: 2;
         top: 10px;
         left: 13px;
         color: #739AAF;
         border: 1px solid #739AAF;
-        opacity: 0.7;
         font-weight: bold;
         border-radius: 5px;
         height: 50px;
         padding: 3px;
-        width: 200px;
+        width: 210px;
         font-family: $font-primary;
-        .text{
-            padding-left: 5px;
-            .time{
-                margin-top: 10px;
-                font-size: 14px;
+        .wrap{
+            display: flex;
+            flex-direction: row;
+            font-family: $font-primary;
+            .icon{
+                width: 48px;
             }
-            .utc{
-                margin-top: 1px;
-                font-size: 8px;
+            .text{
+                padding-left: 5px;
+                padding-right: 5px;
+                .time{
+                    margin-top: 5px;
+                    font-size: 14px;
+                }
+                .utc{
+                    margin-top: 1px;
+                    font-size: 10px;
+                }
             }
         }
     }
