fixed bug for step2 reservation

--- a/UI/src/dashboard/search/search.scss
+++ b/UI/src/dashboard/search/search.scss
@@ -177,6 +177,9 @@
                     background-color: rgba(35,41,57,0.84);
                     padding: 5px 10px 5px 15px;
                     margin-bottom: 5px;
+                    .cursor{
+                        cursor: pointer;
+                    }
                     .text{
                         width: 50%;
                     }
