--- a/UI/src/sass/theme.scss
+++ b/UI/src/sass/theme.scss
@@ -106,6 +106,16 @@
             border-style: solid;
             border-color: transparent transparent transparent black;
         }
+
+        .loading{
+            display: flex;
+            flex-direction: column;
+            width: 100%;
+            height: 100%;
+            justify-content: center;
+            align-items: center;
+            color: #739AAF;
+        }
     }  
 }
  
